# NativeLab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NativeLab.spec  README.md  SECURITY.md  build.bat  build.sh  changelog.txt  comt.sh  index.html  main.py  nativelab.py  overview.md  pyproject.toml  pyrightconfig.json  requirements.txt  robots.txt  setup.html  setup.py  sitemap.xml  todo.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
GlobalConfig/: binaryResolve.py  config.py  config_global.py  const.py  hardwareUtil.py
Model/: APImodels.py  ModelRegistry.py  model_family.py  model_global.py  templates.py
PhonoLab/: .gitignore  MANIFEST.in  README.md  __init__.py  config.py  downloads.py  hardware.py  llama_cpp_setup.py  main.py  paths.py  pyproject.toml  registry.py  safety.py  setup.py  small_models.py
PhonoLab/android/: .gitignore  README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts  setup_binaries.sh
PhonoLab/android/app/: build.gradle.kts  proguard-rules.pro
PhonoLab/android/app/src/main/: AndroidManifest.xml
PhonoLab/android/app/src/main/assets/: katex_template.html
PhonoLab/android/app/src/main/assets/runtimes/: README.md
PhonoLab/android/app/src/main/assets/runtimes/android-arm64/: README.md
PhonoLab/android/app/src/main/cpp/: CMakeLists.txt  runner.cpp
PhonoLab/android/app/src/main/java/org/nativelab/phonolab/: LlamaCppManager.kt  LlamaRuntime.kt  MainActivity.kt  ModelCatalog.kt  ModelFamily.kt  PhonoLabApp.kt  PhonoLabStore.kt  RagProcessor.kt  SafeDownloader.kt  StorageManager.kt
PhonoLab/android/app/src/main/java/org/nativelab/phonolab/adapter/: ApiModelAdapter.kt  CatalogAdapter.kt  ChatAdapter.kt  ModelAdapter.kt  SessionAdapter.kt
PhonoLab/android/app/src/main/java/org/nativelab/phonolab/api/: ApiConfig.kt  PhonoLabApiServer.kt
PhonoLab/android/app/src/main/java/org/nativelab/phonolab/data/: ChatSession.kt  ModelManager.kt  SessionManager.kt
PhonoLab/android/app/src/main/java/org/nativelab/phonolab/theme/: ThemeManager.kt
PhonoLab/android/app/src/main/java/org/nativelab/phonolab/ui/: ApiFragment.kt  AttachmentBottomSheet.kt  ChatFragment.kt  DownloadsFragment.kt  ErrorBannerView.kt  ModelsFragment.kt
PhonoLab/android/app/src/main/java/org/nativelab/phonolab/util/: MathHelper.kt  UiHelpers.kt
PhonoLab/android/app/src/main/jniLibs/arm64-v8a/: README.md
PhonoLab/android/app/src/main/jniLibs/armeabi-v7a/: README.md
PhonoLab/android/app/src/main/menu/: ph_drawer_menu.xml
PhonoLab/android/app/src/main/res/drawable/: ic_download.xml  ic_folder.xml  ic_launcher.xml  ic_menu.xml  ic_palette.xml  ic_plus.xml  ic_sidebar.xml  ph_btn_primary.xml  ph_btn_secondary.xml  ph_bubble_ast.xml  ph_bubble_user.xml  ph_card_bg.xml  ph_chat_input_bar_bg.xml  ph_chat_scrollbar.xml  ph_drawer_bg.xml  ph_input_bg.xml  ph_progress_drawable.xml  ph_sidebar_item_active.xml  ph_sidebar_item_bg.xml  ph_spinner_bg.xml
PhonoLab/android/app/src/main/res/layout/: activity_main.xml  bottom_sheet_attachment.xml  dialog_api_model.xml  fragment_api.xml  fragment_chat.xml  fragment_downloads.xml  fragment_models.xml  item_api_model.xml  item_catalog_model.xml  item_message_ast.xml  item_message_user.xml  item_model.xml  item_session.xml  item_session_header.xml  ph_nav_header.xml  ph_spinner_dropdown_item.xml  ph_spinner_item.xml
PhonoLab/android/app/src/main/res/layout-sw600dp/: activity_main.xml
PhonoLab/android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
PhonoLab/android/app/src/main/res/values-night/: colors.xml  themes.xml
PhonoLab/android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
PhonoLab/android/gradle/wrapper/: gradle-wrapper.properties
PhonoLab/docs/: ANDROID_APP.md  CONSTANTS.md  CONTRIBUTING.md  FILE_INDEX.md  README.md  api_endpoints.md
PhonoLab/engine/: __init__.py  llama_cpp.py
PhonoLab/native/: __init__.py  mobile_core.c  mobile_core.py
PhonoLab/tests/: test_android_project.py  test_mobile_node.py
PhonoLab/ui/: kivy_app.py
Prefrences/: ParallelLoading.py  prefrence_global.py
Server/: ServerHandling.py  hfdwld.py  server_global.py
UI/: RichTextEditor.py  UI_const.py  UI_global.py  effects.py  md-html.py  md_to_html.py  tabs.py  widgets.py
codeparser/: codeparser_global.py  refrenceengine.py  scriptparser.py
components/: components_global.py  jobhandler.py  multipdf_summarise.py  pdfsummarise.py  pdfsummarize.py  reason_code_pipeline.py
constants/: const.py
core/: serverstreamer.py  streamer_global.py
docs/: README.md  architecture.md  cli.md  features.md  installation.md  integrations.md  labs.md  models.md  pipeline-builder.md  troubleshooting.md  ui.md  workflows.md
imports/: import_global.py  optional_lib.py  pyqt_lib.py  standard_lib.py
nativelab/: __main__.py  main.py  manual.py  server.py
nativelab-site/: compare.html  docs-dev.html  docs-user.html  features.html  index.html  package-lock.json  package.json  phonolab.html  pipeline.html  setup.html  site.css  site.js  vite.config.js
old_files/: nativelab.py
pipelinebuilder/: canvas.py  editordialogue.py  executionWorker.py  outrender.py  pipblck.py  pipe_global.py  pipebuilder.py  pipefunctions.py
scripts/: download_svg_icons.py
tests/: test_ai_pipeline_builder.py  test_api_server_pipeline_models.py  test_api_server_tab.py  test_auto_setup.py  test_auto_setup_ui_edges.py  test_context_meter.py  test_hf_deps.py  test_llm_errors.py  test_mainwindow_split.py  test_native_helpers.py  test_pipeline_api_models.py  test_pipeline_canvas_ids.py  test_pipeline_examples.py  test_pipeline_native_core.py  test_pipeline_storage_path.py  test_qt_workers.py
web_page/: compare.html  features.html  phonolab.html  pipeline.html  (+3 more)
(+225 files in other folders)
