[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nativelab"
version = "0.3.6"
description = "NativeLab AI framework"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "psutil==7.2.2",
    "pypdf>=6.1.3",
    "PyQt6==6.10.2"
]

[project.optional-dependencies]
cli = [
    "psutil==7.2.2",
    "pypdf>=6.1.3"
]
labs = [
    "psutil==7.2.2",
    "pypdf>=6.1.3",
    "PyQt6==6.10.2"
]

[dependency-groups]
cli = [
    "psutil==7.2.2",
    "pypdf>=6.1.3"
]
labs = [
    { include-group = "cli" },
    "PyQt6==6.10.2"
]

[project.scripts]
nativelab = "nativelab.__main__:main"
nativelab-cli = "nativelab.__main__:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nativelab*"]

[tool.setuptools.package-data]
nativelab = [
    "*.png",
    "*.ico",
    "assets/icons/*.svg",
    "assets/katex/LICENSE",
    "assets/katex/*.css",
    "assets/katex/*.js",
    "assets/katex/fonts/*",
    "integrations/examples/*",
    "pipelinebuilder/examples/*.json",
    "native/*.rs",
    "native/libnativelab_rust.so",
    "native/libnativelab_rust.dylib",
    "native/nativelab_rust.dll",
]
